# api-web-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.en.md  README.md  index.html  nginx-spa.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: deploy.yml  release.yml
specs/: document-reading.md
src/: App.tsx  config.ts  index.css  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src/agent/: loop.ts
src/modes/: chat.ts
src/providers/: anthropic.ts  base.ts  index.ts  openai.ts  preset-models.ts  router.ts  stream-parser.ts
src/runtime/: files.ts
src/runtime/doc-parsers/: docx.ts  index.ts  pdf.ts  xlsx.ts
src/storage/: conversations.ts  db.ts  index.ts  settings.ts
src/store/: index.ts
src/tools/: json-schema.ts  registry.ts
src/tools/builtin/: bundle-files.ts  index.ts  web-fetch.ts  web-search.ts
src/ui/chat/: CodeBlock.tsx  Composer.tsx  Footer.tsx  Header.tsx  MessageItem.tsx  MessageList.tsx  Sidebar.tsx  ToolCallCard.tsx  UsageBar.tsx
src/ui/settings/: ProviderForm.tsx  SettingsPanel.tsx
test/: bundle.test.ts  cache.test.ts  e2e.test.ts  helpers.ts  long-context.test.ts  multiturn.test.ts  setup.ts  thinking.test.ts
