[package]
name = "api-web-agent"
version = "0.1.3"
description = "Browser-side AI agent platform"
authors = ["zuiho-kai"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
